k8s/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: internal-haproxy-openmanager
  labels:
    name: internal-haproxy-openmanager
    app: haproxy-openmanager
